--- a/IdentityManagementWebService/Web.config
+++ b/IdentityManagementWebService/Web.config
@@ -4,6 +4,9 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+    <connectionStrings>
+        <add name="MyConnectionString" connectionString="Server=IdentityManagementService\IdentityManagementService;DATABASE=Online Application Builder;Integrated Security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
