--- a/IdentityManagementWebService/IdentityManagementWebService.csproj
+++ b/IdentityManagementWebService/IdentityManagementWebService.csproj
@@ -73,6 +73,8 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="css\addidentitystyle.css" />
+    <Content Include="css\identitiesstyle.css" />
+    <Content Include="Pages\Signup.aspx" />
     <Content Include="vendor\bootstrap\css\bootstrap.css.map" />
     <Content Include="vendor\bootstrap\css\bootstrap.min.css.map" />
     <Content Include="vendor\bootstrap\js\bootstrap.bundle.js.map" />
@@ -138,6 +140,13 @@
     </Compile>
     <Compile Include="Pages\Identities.aspx.designer.cs">
       <DependentUpon>Identities.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Signup.aspx.cs">
+      <DependentUpon>Signup.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\Signup.aspx.designer.cs">
+      <DependentUpon>Signup.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
