--- a/IdentityManagementWebService/Web.config
+++ b/IdentityManagementWebService/Web.config
@@ -4,9 +4,52 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-    <connectionStrings>
-        <add name="MyConnectionString" connectionString="Server=IdentityManagementService\IdentityManagementService;DATABASE=Online Application Builder;Integrated Security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
-    </connectionStrings>
+    <configSections>
+        <section name="aws" type="Amazon.AWSSection, AWSSDK.Core"/>
+    </configSections>
+    <!--<aws
+  endpointDefinition="string value"
+  region="string value"
+  profileName="rubab"
+  profilesLocation="string value">
+        <logging
+          logTo="None, Log4Net, SystemDiagnostics"
+          logResponses="Never | OnError | Always"
+          logMetrics="true | false"
+          logMetricsFormat="Standard | JSON"
+          logMetricsCustomFormatter="NameSpace.Class, Assembly" />
+        <dynamoDB
+          conversionSchema="V1 | V2">
+            <dynamoDBContext
+              tableNamePrefix="string value">
+                <alias
+                  fromTable="string value"
+                  toTable="string value" />
+                <map
+                  type="NameSpace.Class, Assembly"
+                  targetTable="string value">
+                    <property
+                      name="string value"
+                      attribute="string value"
+                      ignore="true | false"
+                      version="true | false"
+                      converter="NameSpace.Class, Assembly" />
+                </map>
+            </dynamoDBContext>
+        </dynamoDB>
+        <s3
+          useSignatureVersion4="true | false" />
+        <ec2
+          useSignatureVersion4="true | false" />
+        <proxy
+          host="string value"
+          port="1234"
+          username="string value"
+          password="string value" />
+    </aws>-->
+    <aws region="us-east-1" profileName="rubab">
+        <logging logTo="Log4Net"/>
+    </aws>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
@@ -21,4 +64,10 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+<appSettings>
+        <add key="AWSProfileName" value="rubab"/>
+        <add key="AWSRegion" value="us-east-1"/>
+    </appSettings>
 </configuration>
+
+   
