--- a/IdentityManagementWebService/Web.config
+++ b/IdentityManagementWebService/Web.config
@@ -1,13 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-    <configSections>
-        <section name="aws" type="Amazon.AWSSection, AWSSDK.Core"/>
-    </configSections>
-    <!--<aws
+  <configSections>
+    <section name="aws" type="Amazon.AWSSection, AWSSDK.Core"/>
+  </configSections>
+  <!--<aws
   endpointDefinition="string value"
   region="string value"
   profileName="rubab"
@@ -47,27 +47,35 @@
           username="string value"
           password="string value" />
     </aws>-->
-    <aws region="us-east-1" profileName="rubab">
-        <logging logTo="Log4Net"/>
-    </aws>
+  <aws region="us-east-1" profileName="rubab">
+    <logging logTo="Log4Net"/>
+  </aws>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.5" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.6.1"/>
-    <httpRuntime targetFramework="4.6.1"/>
+    <compilation debug="true" targetFramework="4.5"/>
+    <httpRuntime targetFramework="4.5"/>
   </system.web>
+  <appSettings>
+    <add key="AWSProfileName" value="rubab"/>
+    <add key="AWSRegion" value="us-east-1"/>
+      <add key="accesskey" value="AKIAI2QSS5EILD2A3APA" />
+      <add key="secretkey" value="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" />
+  </appSettings>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs"
-        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-        warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701"/>
+        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+        warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701"/>
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb"
-        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-        warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
+        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+        warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
-<appSettings>
-        <add key="AWSProfileName" value="rubab"/>
-        <add key="AWSRegion" value="us-east-1"/>
-    </appSettings>
 </configuration>
-
-   
